# Abalone-Docker

./: .gitignore  Abalone.sln  docker-compose.yml  readme.md
GameAgent/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp
GameAgent/src/: automata.cpp  automata.h  logic.cpp  logic.h  main.cpp  util.cpp  util.h
GameBackend/: Dockerfile  GameBackend.csproj  Program.cs  Startup.cs  WeatherForecast.cs
GameBackend/Classes/: AgentAction.cs  AgentRequester.cs  AgentState.cs  CreateGameArgs.cs  GameUtil.cs  GetAINextMoveArgs.cs  GetGameArgs.cs  MoveArgs.cs  ReadableAction.cs  ReadableState.cs  ValidMove.cs
GameBackend/Controllers/: GameController.cs  HomeController.cs  WeatherForecastController.cs
GameBackend/Models/: ErrorViewModel.cs  Game.cs
GameBackend/Properties/: launchSettings.json
GameBackend/Views/Game/: Index.cshtml
GameBackend/Views/Shared/: _Layout.cshtml
GameBackend/wwwroot/css/: game.css  site.css
GameBackend/wwwroot/js/: game.js
